fix empty logo spacings

--- a/xmlui/src/components/AppHeader/AppHeader.module.scss
+++ b/xmlui/src/components/AppHeader/AppHeader.module.scss
@@ -57,6 +57,21 @@ $width-logo-AppHeader: createThemeVar("width-logo-#{$component}");
   gap: var(--stack-gap-default);
 }
 
+.logoAndTitle {
+  display: flex;
+  align-items: center;
+  gap: t.$space-4;
+  height: 100%;
+
+  &:not(:empty) {
+    padding-right: t.$space-2;
+  }
+
+  &:empty {
+    display: none;
+  }
+}
+
 .logoContainer:not(:empty) {
   flex-shrink: 0;
   display: flex;
@@ -64,22 +79,26 @@ $width-logo-AppHeader: createThemeVar("width-logo-#{$component}");
   height: 100%;
   align-items: center;
 
-  @include  t.paddingVars($themeVars, "logo-#{$component}");
+  @include t.paddingVars($themeVars, "logo-#{$component}");
 }
 
-.customLogoContainer{
+.customLogoContainer {
   display: flex;
   height: 100%;
-  &>*{
+  align-items: center;
+
+  & > img {
     height: 100%;
   }
 }
 
 .rightItems {
   height: 100%;
+
   &:not(:empty) {
     padding-left: t.$space-4;
   }
+
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -92,9 +111,11 @@ $width-logo-AppHeader: createThemeVar("width-logo-#{$component}");
   padding: t.$space-2;
   color: t.$color-text-subtitle;
   cursor: pointer;
+
   &:hover {
     color: t.$color-text-secondary;
   }
+
   svg {
     width: 100%;
     height: 100%;
